--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Virtual Instructor</string>
+    <string name="Meditation_Description">तत्र प्रत्ययैकतानता ध्यानम्</string>
+    <string name="Yoga_Description">मनः प्रसमनोपायः योग इत्यभिदीयते</string>
 </resources>
