Added Google sign-in

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Virtual Instructor</string>
     <string name="Meditation_Description">तत्र प्रत्ययैकतानता ध्यानम्</string>
     <string name="Yoga_Description">मनः प्रसमनोपायः योग इत्यभिदीयते</string>
+    <string name="web_client_id">316596712267-ev4o8pp60bguurb3gre0i1dgi3i8mf0b.apps.googleusercontent.com</string>
 
 </resources>
